--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
+[submodule "glm"]
+	path = External/src/glm
+	url = git@github.com:g-truc/glm.git
 [submodule "crossguid"]
 	path = External/src/crossguid
-	url = git@github.com:graeme-hill/crossguid.git
+	url = git@github.com:netwarm007/crossguid.git
+[submodule "External/src/crossguid"]
+	path = External/src/crossguid
+	url = git@github.com:netwarm007/crossguid.git
