--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "-I/home/lawliet/workspace/cpp/game_engine/Platform/Empty",
         "-I/home/lawliet/workspace/cpp/game_engine/RHI",
         "-I/home/lawliet/workspace/cpp/game_engine/External/src/crossguid/include/crossguid",
-        "-I/home/lawliet/workspace/cpp/game_engine/External/src/glm/glm"
+        "-I/home/lawliet/workspace/cpp/game_engine/External/src/glm/glm",
+        "-I/home/lawliet/workspace/cpp/game_engine/External/Linux/include"
     ],
     "clang.completion.enable": false
 }
