--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -5,11 +5,14 @@ BaseApplication.cpp
 GraphicsManager.cpp
 MemoryManager.cpp
 SceneManager.cpp
+Image.cpp
 main.cpp
 )
 
 find_library(XG_LIBRARY xg PATHS ${EXTERNAL_LIBRARY_PATH})
-target_link_libraries(Common ${XG_LIBRARY})
+find_library(OPENDDL_LIBRARY OpenDDL PATHS ${EXTERNAL_LIBRARY_PATH})
+find_library(OPENGEX_LIBRARY OpenGEX PATHS ${EXTERNAL_LIBRARY_PATH})
+
 
 if(WIN32)
     add_definitions(-DGUID_WINDOWS)
@@ -28,8 +31,6 @@ else()
     include_directories(${LIBUUID_INCLUDE_DIR})
     target_link_libraries(Common ${LIBUUID_LIBRARY})
     add_definitions(-DGUID_LIBUUID)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -no-pie -pedantic")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
 endif(WIN32)
 
-
-add_subdirectory(test)
