--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "glm"]
 	path = External/src/glm
 	url = git@github.com:g-truc/glm.git
-[submodule "External/src/crossguid"]
+[submodule "crossguid"]
 	path = External/src/crossguid
 	url = git@github.com:netwarm007/crossguid.git
-[submodule "External/src/opengex"]
+[submodule "opengex"]
 	path = External/src/opengex
 	url = git@github.com:netwarm007/OpenGEX.git
+[submodule "ispc"]
+	path = External/src/ispc
+	url = https://github.com/ispc/ispc.git
