add ispc math lib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "-I/home/lawliet/workspace/cpp/game_engine/Framework/Common",
         "-I/home/lawliet/workspace/cpp/game_engine/Framework/Interface",
         "-I/home/lawliet/workspace/cpp/game_engine/Framework/Parser",
+        "-I/home/lawliet/workspace/cpp/game_engine/Framework/GeomMath",
         "-I/home/lawliet/workspace/cpp/game_engine/RHI",
         "-I/home/lawliet/workspace/cpp/game_engine/External/src/glad/include",
         "-I/home/lawliet/workspace/cpp/game_engine/Platform/Linux",
