--- a/Framework/GeomMath/CMakeLists.txt
+++ b/Framework/GeomMath/CMakeLists.txt
@@ -1,22 +1,26 @@
-IF(${WIN32})
-        SET(GEOMMATH_LIB_FILE ${CMAKE_CURRENT_BINARY_DIR}/GeomMath.lib)
-        SET(ISPC_COMPILER ispc.exe)
-        SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/External/ispc/Release/)
-        if($ENV{VSCMD_ARG_TGT_ARCH} MATCHES "x64")
-            SET(ISPC_OPTIONS --arch=x86-64)
-            SET(LIBRARIAN_COMMAND lib /MACHINE:X64 /OUT:${GEOMMATH_LIB_FILE})
+SET(GEOMMATH_LIB_FILE ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}GeomMath${CMAKE_STATIC_LIBRARY_SUFFIX})
+SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/External/${CMAKE_HOST_SYSTEM_NAME}/bin/)
+IF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
+    SET(ISPC_COMPILER ispc.exe)
+    IF(NOT ${CMAKE_CROSSCOMPILING})
+            if(${ARCH_BIT} MATCHES 64)
+            SET(ISPC_OPTIONS --arch=x86-64 --target=host)
+            SET(CMAKE_AR lib)
+            SET(ISPC_LIBRARIAN_OPTIONS /MACHINE:X64 /OUT:${GEOMMATH_LIB_FILE})
         else()
-            SET(ISPC_OPTIONS --arch=x86)
-            SET(LIBRARIAN_COMMAND lib /MACHINE:X86 /OUT:${GEOMMATH_LIB_FILE})
+            SET(ISPC_OPTIONS --arch=x86 --target=host)
+            SET(CMAKE_AR lib)
+            SET(ISPC_LIBRARIAN_OPTIONS /MACHINE:X86 /OUT:${GEOMMATH_LIB_FILE})
         endif()
-ELSE()
-        SET(GEOMMATH_LIB_FILE ${CMAKE_CURRENT_BINARY_DIR}/libGeomMath.a)
-        SET(ISPC_COMPILER ispc)
-        # SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/External/ispc/)
-        SET(ISPC_COMPILER_PATH /usr/bin)
-        SET(ISPC_OPTIONS --arch=x86-64)
-        SET(LIBRARIAN_COMMAND ar -crv -o ${GEOMMATH_LIB_FILE})
-ENDIF(${WIN32})
+    ELSE()
+            SET(ISPC_OPTIONS --arch=arm --cpu=cortex-a9 --target=neon-i32x4)
+            SET(CMAKE_AR ${SNC_TOOLCHAIN_DIR}psp2snarl -rcv ${GEOMMATH_LIB_FILE})
+    ENDIF()
+ELSEIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
+    SET(ISPC_COMPILER ispc)
+    SET(ISPC_OPTIONS --arch=x86-64)
+    SET(ISPC_LIBRARIAN_OPTIONS -rcv -o ${GEOMMATH_LIB_FILE})
+ENDIF()
 
 SET(GEOMMATH_LIB_HEADER_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
