--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -36,5 +36,5 @@ else()
     target_link_libraries(Common ${LIBUUID_LIBRARY})
     add_definitions(-DGUID_LIBUUID)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
-endif(WIN32)
+endif()
 
