--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
         "-I/home/lawliet/workspace/cpp/game_engine/External/src/glm/glm",
         "-I/home/lawliet/workspace/cpp/game_engine/External/Linux/include"
     ],
-    "clang.completion.enable": false
+    "clang.completion.enable": false,
+    "files.associations": {
+        "vector": "cpp"
+    }
 }
