--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,11 +12,12 @@
         "-I/home/lawliet/workspace/cpp/game_engine/Platform/Empty",
         "-I/home/lawliet/workspace/cpp/game_engine/RHI",
         "-I/home/lawliet/workspace/cpp/game_engine/External/src/crossguid/include/crossguid",
-        "-I/home/lawliet/workspace/cpp/game_engine/External/src/glm/glm",
+        "-I/home/lawliet/workspace/cpp/game_engine/External/src/glm",
         "-I/home/lawliet/workspace/cpp/game_engine/External/Linux/include"
     ],
     "clang.completion.enable": false,
     "files.associations": {
-        "vector": "cpp"
+        "vector": "cpp",
+        "ostream": "cpp"
     }
 }
