--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.eap filter=lfs diff=lfs merge=lfs -text
+*.ldb filter=lfs diff=lfs merge=lfs -text
+External/Linux/bin filter=lfs diff=lfs merge=lfs -text
+External/Linux/bin/ispc filter=lfs diff=lfs merge=lfs -text
