--- a/Framework/GeomMath/CMakeLists.txt
+++ b/Framework/GeomMath/CMakeLists.txt
@@ -18,7 +18,7 @@ IF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
     ENDIF()
 ELSEIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
     SET(ISPC_COMPILER ispc)
-    SET(ISPC_OPTIONS --arch=x86-64)
+    SET(ISPC_OPTIONS --pic --arch=x86-64)
     SET(ISPC_LIBRARIAN_OPTIONS -rcv -o ${GEOMMATH_LIB_FILE})
 ENDIF()
 
