--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,9 @@
-[submodule "glm"]
-	path = External/src/glm
-	url = git@github.com:g-truc/glm.git
 [submodule "crossguid"]
 	path = External/src/crossguid
-	url = git@github.com:netwarm007/crossguid.git
+	url = https://github.com/netwarm007/crossguid.git
 [submodule "opengex"]
 	path = External/src/opengex
-	url = git@github.com:netwarm007/OpenGEX.git
+	url = https://github.com/netwarm007/OpenGEX.git
 [submodule "ispc"]
 	path = External/src/ispc
 	url = https://github.com/netwarm007/ispc.git
