--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(MyGameEngineOpenGL
 )
 
 target_link_libraries(MyGameEngineOpenGL WindowsApplication OpenGLRHI Common
- ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${OPENGL_LIBRARIES})
+ ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${OPENGL_LIBRARIES} ${ZLIB_LIBRARY})
 
 target_include_directories(MyGameEngineOpenGL PRIVATE "${PROJECT_SOURCE_DIR}/External/src/glad/include")
 __add_xg_platform_dependencies(MyGameEngineOpenGL)
