--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "zlib"]
 	path = External/src/zlib
 	url = https://github.com/L-Sun/zlib.git
-[submodule "External/src/bullet3"]
+[submodule "bullet3"]
 	path = External/src/bullet3
 	url = https://github.com/bulletphysics/bullet3.git
