--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,12 @@ set(CMAKE_CXX_FLAGS "-DDEBUG")
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/External/src/crossguid/cmake")
 
+IF(${UNIX})
+    set(TARGET_PLATFORM "Linux")
+ELSEIF(${WIN32})
+    set(TARGET_PLATFORM "Windows")
+ENDIF(${UNIX})
+
 include(TargetArchDetect)
 target_architecture(TARGET_ARCH)
 if((TARGET_ARCH MATCHES "x86_64" OR TARGET_ARCH MATCHES "ia64") AND NOT OF_32BIT)
@@ -24,21 +30,19 @@ include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
 
 include_directories("${PROJECT_SOURCE_DIR}/External/src/glad/include")
-
-IF(${UNIX})
-    set(TARGET_PLATFORM "Linux")
-ELSEIF(${WIN32})
-    set(TARGET_PLATFORM "Windows")
-ENDIF(${UNIX})
 include_directories("${PROJECT_SOURCE_DIR}/Platform/${TARGET_PLATFORM}")
 set(EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${TARGET_PLATFORM})
 include_directories("${EXTERNAL_ROOT}/include")
+include_directories("${EXTERNAL_ROOT}/include/bullet")
 set(EXTERNAL_LIBRARY_PATH ${EXTERNAL_ROOT}/lib)
 
-find_library(XG_LIBRARY xg PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH)
-find_library(OPENDDL_LIBRARY OpenDDL PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH)
-find_library(OPENGEX_LIBRARY OpenGEX PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH)
+find_library(XG_LIBRARY xg PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
+find_library(OPENDDL_LIBRARY OpenDDL PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
+find_library(OPENGEX_LIBRARY OpenGEX PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(ZLIB_LIBRARY NAMES z zlib PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
+find_library(BULLET_COLLISION_LIBRARY NAMES BulletCollision PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
+find_library(BULLET_DYNAMICS_LIBRARY NAMES BulletDynamics PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
+find_library(BULLET_LINEARMATH_LIBRARY NAMES LinearMath PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 
 include(PlatformDependencies)
 include(CheckCXXSourceCompiles)
@@ -64,3 +68,4 @@ add_subdirectory(RHI)
 add_subdirectory(Test)
 
 enable_testing()
+
