--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -8,11 +8,20 @@ Scene.cpp
 SceneObject.cpp
 SceneManager.cpp
 InputManager.cpp
+PhysicsManager.cpp
 Image.cpp
 main.cpp
 )
 
-target_link_libraries(Common GeomMath)
+target_link_libraries(Common 
+        GeomMath
+        ${OPENGEX_LIBRARY} 
+        ${OPENDDL_LIBRARY} 
+        ${XG_LIBRARY} 
+        ${ZLIB_LIBRARY}
+        ${BULLET_DYNAMICS_LIBRARY} 
+        ${BULLET_COLLISION_LIBRARY} 
+        ${BULLET_LINEARMATH_LIBRARY})
 
 if(WIN32)
     add_definitions(-DGUID_WINDOWS)
