implement physics manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,10 @@ endif()
 
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/Geometries")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Parser")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
+include_directories("${PROJECT_SOURCE_DIR}/Physics")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
 
 include_directories("${PROJECT_SOURCE_DIR}/External/src/glad/include")
@@ -64,6 +66,8 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
 add_subdirectory(Framework)
+add_subdirectory(Game)
+add_subdirectory(Physics)
 add_subdirectory(Platform)
 add_subdirectory(RHI)
 add_subdirectory(Test)
