--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -1,15 +1,25 @@
-add_library(WindowsApplication WindowsApplication.cpp)
-
-
 find_package(OpenGL REQUIRED)
 
-add_executable(MyGameEngineOpenGL
-    OpenGLApplication.cpp
-    ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad_wgl.c
+add_library(PlatformInterface
+                WindowsApplication.cpp
+                OpenGLApplication.cpp
+                ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad_wgl.c
 )
 
-target_link_libraries(MyGameEngineOpenGL WindowsApplication OpenGLRHI Common
- ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${OPENGL_LIBRARIES} ${ZLIB_LIBRARY})
+target_link_libraries(PlatformInterface
+                ${OPENGL_LIBRARIES}
+)
+target_include_directories(PlatformInterface PRIVATE 
+        "${PROJECT_SOURCE_DIR}/External/src/glad/include")
 
-target_include_directories(MyGameEngineOpenGL PRIVATE "${PROJECT_SOURCE_DIR}/External/src/glad/include")
-__add_xg_platform_dependencies(MyGameEngineOpenGL)
+
+add_library(MyGameEngine
+                OpenGLApplicationConfig.cpp
+)
+target_link_libraries(MyGameEngine
+                        Common 
+                        OpenGLRHI 
+                        PlatformInterface
+)
+target_include_directories(MyGameEngine PRIVATE 
+        "${PROJECT_SOURCE_DIR}/External/src/glad/include")
