--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -1,25 +1,25 @@
-find_package(OpenGL REQUIRED)
-
 add_library(PlatformInterface
-                WindowsApplication.cpp
-                OpenGLApplication.cpp
-                ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad_wgl.c
+    WindowsApplication.cpp
 )
-
 target_link_libraries(PlatformInterface
-                ${OPENGL_LIBRARIES}
+    Common
 )
-target_include_directories(PlatformInterface PRIVATE 
-        "${PROJECT_SOURCE_DIR}/External/src/glad/include")
 
+add_library(MyGameEngineD3d12
+    D3d12Application.cpp
+    D3d12ApplicationConfig.cpp
+)
+target_link_libraries(MyGameEngineD3d12
+    D3dRHI
+    PlatformInterface
+)
 
 add_library(MyGameEngine
-                OpenGLApplicationConfig.cpp
+    OpenGLApplication.cpp
+    OpenGLApplicationConfig.cpp
+    ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad_wgl.c
 )
 target_link_libraries(MyGameEngine
-                        Common 
-                        OpenGLRHI 
-                        PlatformInterface
+    OpenGLRHI
+    PlatformInterface
 )
-target_include_directories(MyGameEngine PRIVATE 
-        "${PROJECT_SOURCE_DIR}/External/src/glad/include")
