--- a/RHI/OpenGL/CMakeLists.txt
+++ b/RHI/OpenGL/CMakeLists.txt
@@ -1,5 +1,7 @@
+find_package(OpenGL REQUIRED)
 add_library(OpenGLRHI
         OpenGLGraphicsManager.cpp
        ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad.c
 )
 target_include_directories(OpenGLRHI PRIVATE "${PROJECT_SOURCE_DIR}/External/src/glad/include")
+target_link_libraries(OpenGLRHI ${OPENGL_LIBRARIES})
