--- a/Framework/GeomMath/CMakeLists.txt
+++ b/Framework/GeomMath/CMakeLists.txt
@@ -22,15 +22,14 @@ ELSEIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
     SET(ISPC_LIBRARIAN_OPTIONS -rcv -o ${GEOMMATH_LIB_FILE})
 ENDIF()
 
-SET(GEOMMATH_LIB_HEADER_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/include)
+SET(ISPC_OPTIONS ${ISPC_OPTIONS} -O2 --woff)
+add_subdirectory(ispc)
 
+SET(GEOMMATH_LIB_HEADER_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(GeomMath STATIC IMPORTED GLOBAL)
 add_dependencies(GeomMath GeomMathLib)
 
 set_target_properties(GeomMath
-        PROPERTIES
-        IMPORTED_LOCATION ${GEOMMATH_LIB_FILE}
-        INTERFACE_INCLUDE_DIRECTORIES ${GEOMMATH_LIB_HEADER_FOLDER}
-        )
-
-add_subdirectory(ispc)
+    PROPERTIES
+    IMPORTED_LOCATION ${GEOMMATH_LIB_FILE}
+)
