--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -14,11 +14,11 @@ add_test(NAME TEST_OgexParser COMMAND OgexParserTest)
 # add_test(NAME TEST_SceneObject COMMAND SceneObjectTest)
 
 add_executable(SceneLoadingTest SceneLoadingTest.cpp)
-target_link_libraries(SceneLoadingTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${ZLIB_LIBRARY})
+target_link_libraries(SceneLoadingTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY})
 add_test(NAME TEST_SceneLoading COMMAND SceneLoadingTest)
 
 add_executable(JpegParserTest JpegParserTest.cpp)
-target_link_libraries(JpegParserTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${ZLIB_LIBRARY})
+target_link_libraries(JpegParserTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY})
 add_test(NAME TEST_JpegParser COMMAND JpegParserTest)
 
 add_executable(PngParserTest PngParserTest.cpp)
