--- a/RHI/D3D/CMakeLists.txt
+++ b/RHI/D3D/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(D3dRHI
-D3d12GraphicsManager.cpp
+add_library(D3DRHI
+D3D12GraphicsManager.cpp
 )
 target_link_libraries(
-    D3dRHI
+    D3DRHI
     d3d12
     dxgi
     d3dcompiler
