remove "using namepsace std;"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ else()
         set(ARCH_BIT 32)
 endif()
 
+find_package(ZLIB REQUIRED)
+
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Geometries")
@@ -32,7 +34,6 @@ include_directories("${PROJECT_SOURCE_DIR}/Framework/Parser")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
 include_directories("${PROJECT_SOURCE_DIR}/Physics")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
-
 include_directories("${PROJECT_SOURCE_DIR}/External/src/glad/include")
 include_directories("${PROJECT_SOURCE_DIR}/Platform/${TARGET_PLATFORM}")
 set(EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${TARGET_PLATFORM})
@@ -40,10 +41,10 @@ include_directories("${EXTERNAL_ROOT}/include")
 include_directories("${EXTERNAL_ROOT}/include/bullet")
 set(EXTERNAL_LIBRARY_PATH ${EXTERNAL_ROOT}/lib)
 
+
 find_library(XG_LIBRARY xg PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(OPENDDL_LIBRARY OpenDDL PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(OPENGEX_LIBRARY OpenGEX PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
-find_library(ZLIB_LIBRARY NAMES z zlib PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(BULLET_COLLISION_LIBRARY NAMES BulletCollision PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(BULLET_DYNAMICS_LIBRARY NAMES BulletDynamics PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 find_library(BULLET_LINEARMATH_LIBRARY NAMES LinearMath PATHS ${EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
