--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 add_executable(AssetLoaderTest AssetLoaderTest.cpp)
-target_link_libraries(AssetLoaderTest Common ${ZLIB_LIBRARY})
+target_link_libraries(AssetLoaderTest Common)
 add_test(NAME TEST_AssetLoader COMMAND AssetLoaderTest)
 
 add_executable(OgexParserTest OgexParserTest.cpp)
-target_link_libraries(OgexParserTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${ZLIB_LIBRARY})
+target_link_libraries(OgexParserTest Common)
 __add_xg_platform_dependencies(OgexParserTest)
 add_test(NAME TEST_OgexParser COMMAND OgexParserTest)
 
@@ -14,15 +14,15 @@ add_test(NAME TEST_OgexParser COMMAND OgexParserTest)
 # add_test(NAME TEST_SceneObject COMMAND SceneObjectTest)
 
 add_executable(SceneLoadingTest SceneLoadingTest.cpp)
-target_link_libraries(SceneLoadingTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY})
+target_link_libraries(SceneLoadingTest Common)
 add_test(NAME TEST_SceneLoading COMMAND SceneLoadingTest)
 
 add_executable(JpegParserTest JpegParserTest.cpp)
-target_link_libraries(JpegParserTest Common ${TURBO_JPEG_LIBRARY})
+target_link_libraries(JpegParserTest Common)
 add_test(NAME TEST_JpegParser COMMAND JpegParserTest)
 
 add_executable(PngParserTest PngParserTest.cpp)
-target_link_libraries(PngParserTest Common ${OPENGEX_LIBRARY} ${OPENDDL_LIBRARY} ${XG_LIBRARY} ${ZLIB_LIBRARY})
+target_link_libraries(PngParserTest Common)
 add_test(NAME TEST_PngParser COMMAND PngParserTest)
 
 
