--- a/Framework/Geometries/CMakeLists.txt
+++ b/Framework/Geometries/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(Geometries Geometry.cpp Box.cpp Sphere.cpp Plane.cpp)
-target_link_libraries(Geometries GeomMath)
+target_link_libraries(Geometries PRIVATE GeomMath)
+target_include_directories(Geometries INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
