--- a/Physics/My/CMakeLists.txt
+++ b/Physics/My/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(MyPhysics MyPhysicsManager.cpp)
-target_link_libraries(MyPhysics Geometries)
+target_link_libraries(MyPhysics Geometries Common)
+target_include_directories(MyPhysics INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
