--- a/RHI/OpenGL/CMakeLists.txt
+++ b/RHI/OpenGL/CMakeLists.txt
@@ -1,6 +1,11 @@
 find_package(OpenGL REQUIRED)
 add_library(OpenGLRHI
-        OpenGLGraphicsManager.cpp
-       ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad.c
+    OpenGLGraphicsManager.cpp
+    ${PROJECT_SOURCE_DIR}/External/src/glad/src/glad.c
 )
-target_link_libraries(OpenGLRHI ${OPENGL_LIBRARIES})
+target_link_libraries(OpenGLRHI 
+    PRIVATE
+        Common
+        ${OPENGL_LIBRARIES}
+)
+target_include_directories(OpenGLRHI INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
