--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -1,16 +1,29 @@
+add_library(MemoryManager   Allocator.cpp MemoryManager.cpp)
+add_library(AssetLoader     AssetLoader.cpp)
+add_library(SceneManager    SceneManager.cpp Scene.cpp SceneObject.cpp)
+add_library(GraphicsManager GraphicsManager.cpp)
+add_library(DebugManager    DebugManager.cpp)
+add_library(InputManager    InputManager.cpp)
+add_library(Timer           Timer.cpp)
+
+add_library(Dependency INTERFACE)
+target_link_libraries(Dependency INTERFACE Interface)
+target_include_directories(Dependency INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(MemoryManager   PRIVATE Dependency)
+target_link_libraries(AssetLoader     PRIVATE Dependency)
+target_link_libraries(Timer           PRIVATE Dependency)
+target_link_libraries(SceneManager    PRIVATE Dependency crossguid Parser)
+target_link_libraries(GraphicsManager PRIVATE Dependency SceneManager)
+target_link_libraries(DebugManager    PRIVATE Dependency SceneManager)
+target_link_libraries(InputManager    PRIVATE Dependency SceneManager)
+
+target_include_directories(SceneManager INTERFACE "$<TARGET_PROPERTY:crossguid,INTERFACE_INCLUDE_DIRECTORIES>")
+target_include_directories(SceneManager INTERFACE "$<TARGET_PROPERTY:Parser,INTERFACE_INCLUDE_DIRECTORIES>")
+
 add_library(Common
-    Allocator.cpp
-    AssetLoader.cpp
     BaseApplication.cpp
-    GraphicsManager.cpp
-    MemoryManager.cpp
-    Scene.cpp
-    SceneObject.cpp
-    SceneManager.cpp
-    InputManager.cpp
-    DebugManager.cpp
     GameLogic.cpp
-    Timer.cpp
     main.cpp
 )
 
@@ -19,6 +32,13 @@ target_link_libraries(Common
         Interface
         GeomMath
         Parser
+        MemoryManager
+        AssetLoader
+        SceneManager
+        DebugManager
+        GraphicsManager
+        InputManager
+        Timer
 )
 
 target_include_directories(Common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
