--- a/Game/MyTest/CMakeLists.txt
+++ b/Game/MyTest/CMakeLists.txt
@@ -1,14 +1,23 @@
-IF(ANDROID)
-add_library(MyTest SHARED 
-    MyTest.cpp MyTestConfig.cpp)
-ELSEIF(APPLE)
-add_executable(MyTest MACOSX_BUNDLE
-    MyTest.cpp MyTestConfig.cpp)
-ELSE(ANDROID)
-add_executable(MyTest 
-    MyTest.cpp MyTestConfig.cpp)
-ENDIF(ANDROID)
+if(ANDROID)
+    add_library(MyTest
+        SHARED 
+            MyTest.cpp
+            MyTestConfig.cpp
+    )
+elseif(APPLE)
+    add_executable(MyTest
+        MACOSX_BUNDLE
+            MyTest.cpp
+            MyTestConfig.cpp
+    )
+else(ANDROID)
+    add_executable(MyTest 
+        MyTest.cpp
+        MyTestConfig.cpp
+    )
+endif(ANDROID)
+
 target_link_libraries(MyTest 
-                        MyGameEngineD3D12
-                        MyPhysics
+    MyGameEngineD3D12
+    MyPhysics
 )
